--- a/wp-content/themes/KingBerry/style.css
+++ b/wp-content/themes/KingBerry/style.css
@@ -162,26 +162,225 @@ header .nav-content {
     display: inline-table;
 }
 
-#menu-main-menu a {
-    line-height: 36px;
-    margin: 0 5px;
-    padding: 8px 20px;
-    color: #817e7b;
-    font-size: 14px;
+/* MM new menu styles */
+
+#menu-main-menu > li {
+    margin-left: -4px;
 }
 
-#menu-main-menu a:hover, .current-menu-item a {
-	background: #221F4E;
+#menu-main-menu > li > a {
+    line-height: 36px;
+    margin: 0;
+    padding: 8px 25px;
+    color: #817e7b;
+    font-size: 14px;
+    display: inline;
+    font-weight: 400;
+}
+
+#menu-main-menu a:hover, .current-menu-item a, .sm-displayed > a {
+	/*background: #221F4E;*/
 	color: #fff !important;
 }
 
+#menu-main-menu > li:nth-child(1) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(1) > a,
+#menu-main-menu > li.sm-displayed:nth-child(1) > a {
+    background: #221F4E;
+}
+
+#menu-main-menu > li:nth-child(2) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(2) > a,
+#menu-main-menu > li.sm-displayed:nth-child(2) > a {
+    background: #40204F;
+}
+
+#menu-main-menu > li:nth-child(3) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(3) > a,
+#menu-main-menu > li.sm-displayed:nth-child(3) > a {
+    background: #572B68;
+}
+
+#menu-main-menu > li:nth-child(4) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(4) > a,
+#menu-main-menu > li.sm-displayed:nth-child(4) > a {
+    background: #7E598D;
+}
+
+#menu-main-menu > li:nth-child(5) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(5) > a,
+#menu-main-menu > li.sm-displayed:nth-child(5) > a {
+    background: #CD2C24;
+}
+
+#menu-main-menu > li:nth-child(6) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(6) > a,
+#menu-main-menu > li.sm-displayed:nth-child(6) > a {
+    background: #F3836B;
+}
+
+#menu-main-menu > li:nth-child(7) > a:hover, 
+#menu-main-menu > li.current-menu-item:nth-child(7) > a,
+#menu-main-menu > li.sm-displayed:nth-child(7) > a {
+    background: #F59984;
+}
+
+.menu-main-menu-container ul.nav-menu li.menu-item-has-children > a:after {
+  
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 6px solid #817E7B;
+  border-bottom: 0px solid transparent;
+  content: "";
+  display: inline-block;
+  height: 0;
+  position: relative;
+  width: 0;
+  margin-left: 4px;
+  top: -1px;
+}
+
+.menu-main-menu-container ul.nav-menu li.menu-item-has-children > a:hover:after,
+.menu-main-menu-container ul.nav-menu li.menu-item-has-children.sm-displayed > a:after {
+  border-top: 6px solid #fff;
+}
+
+/*.sub-menu .menu-item a{
+    background: none repeat scroll 0 0 #221F4E;
+    color: #FFFFFF !important;
+}
+
+.sub-menu .menu-item a {
+  display: inline-block;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
+  width: 172px;
+}*/
+
+
+
 #menu-main-menu ul.sub-menu {
-    display: none;
+  background: none repeat scroll 0 0 #F3F3F3;
+  margin: 0;
+  position: absolute;
+  z-index: 10;
+  display: none;
 }
 
 #menu-main-menu ul.sub-menu li {
     display: block !important;
+    padding: 4px 25px;
 }
+
+#menu-main-menu ul.sub-menu li:first-child{
+    padding: 4px 25px 4px;
+}
+
+#menu-main-menu ul.sub-menu li:last-child{
+    padding: 4px 25px 4px;
+}
+
+#menu-main-menu ul.sub-menu li a{
+    color: #817E7B;
+    font-size: 14px;
+    display: inline-block;
+    width: 144px;
+    font-weight: 400;
+}
+
+#menu-main-menu ul.sub-menu li a:hover{
+    color: #8B0408 !important;
+}
+
+#outer-wrap #inner-wrap #top{
+    background: transparent;
+}
+
+#nav ul#menu-main-menu{
+    text-align: left;
+}
+
+nav#nav{
+    overflow: visible;
+}
+
+@media screen and (min-width:768px) {
+    .hide-for-mu{
+        display: none !important;
+    }
+
+    
+}
+
+@media screen and (max-width:767px) {
+    .hide-for-sm{
+        display: none !important;
+    }
+
+    #menu-main-menu li {
+      display: inline-block;
+      width: 100%;
+    }
+
+    nav#nav.nav-content {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    }
+    #outer-wrap {
+        background: none repeat scroll 0 0 #1B2143;
+    }
+    #inner-wrap {
+        background: none repeat scroll 0 0 #FFFFFF;
+    }
+
+    #searchform .search-cont{
+        padding: 5px 5px 5px 0;
+    }
+
+    nav#nav{
+        padding-top: 1.25em;
+    }
+
+    nav#nav li{
+        border: 0 !important
+    }
+
+    nav#nav li:last-child{
+        border-bottom: 0;
+    }
+    nav#nav #menu-main-menu > li > a {
+      color: #D11C2B;
+      padding-left: 4px;
+    }
+
+    #menu-main-menu > li > a:hover,
+    #menu-main-menu > li > a:active,  
+    #menu-main-menu > li.current-menu-item > a,
+    #menu-main-menu > li.sm-displayed > a{
+        background: transparent !important;
+        color: #fff !important
+    }
+
+    .menu-main-menu-container ul.nav-menu li.menu-item-has-children > a:after {
+      border-top: 6px solid #D11C2B;
+    }
+
+  /*  html.js.svg.js-ready.csstransforms {
+      margin: 0 !important;
+    }
+*/
+    nav#nav #menu-main-menu ul.sub-menu{
+        background: transparent;
+    }
+
+    nav#nav #menu-main-menu ul.sub-menu li a{
+        color: #fff;
+    }
+
+    nav#nav li a:focus, nav#nav li a:hover{
+        background: transparent;
+    }
+}
+/* end MM new menu styles */
 
 /* Billboard */
 .billboard {
